# MeshCore

./: .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  NOLICENSE  README.md  collisionDemo.cpp  main.cpp  renderDemo.cpp  taskDemo.cpp  taskTemplate.cpp  vcpkg.json
.github/workflows/: ci.yml  docs.yml
acceleration/: AABBOctree.cpp  AABBOctree.h  AABBTree.h  AABBVolumeHierarchy.cpp  AABBVolumeHierarchy.h  AbstractBoundsTree.h  CachingBoundsTreeFactory.h
core/: AABB.cpp  AABB.h  Core.h  FileParser.cpp  FileParser.h  IndexEdge.h  IndexFace.h  IndexTriangle.h  ModelSpaceMesh.cpp  ModelSpaceMesh.h  OBB.h  Plane.h  Quaternion.h  Ray.cpp  Ray.h  Sphere.h  Transformation.cpp  Transformation.h  Vertex.cpp  Vertex.h  VertexTriangle.cpp  VertexTriangle.h  WorldSpaceMesh.cpp  WorldSpaceMesh.h
demos/: CMakeLists.txt  animationDemo.cpp  collisionDemo.cpp  convexHullDemo.cpp  distanceDemo.cpp  renderDemo.cpp  taskDemo.cpp  viewStripPackingSolution.cpp
docs/: Doxyfile
factories/: AABBFactory.h  OBBFactory.h  SphereFactory.h
geometric/: AABBRay.cpp  AABBTriangle.cpp  BoxBox.cpp  GJK.cpp  GJK.h  Intersection.h  MeshMesh.cpp  OBBOBB.cpp  Plane.cpp  RayTriangle.cpp  Sphere.cpp  TriDist.cpp  TriangleTriangle.cpp
include/meshcore/acceleration/: AABBOctree.h  AABBVolumeHierarchy.h  AbstractBoundsTree.h  BoundingVolumeHierarchy.h  CachingBoundsTreeFactory.h
include/meshcore/core/: AABB.h  Color.h  Core.h  IndexEdge.h  IndexTriangle.h  Line.h  ModelSpaceMesh.h  OBB.h  Plane.h  Quaternion.h  Ray.h  Sphere.h  Transformation.h  Vertex.h  VertexTriangle.h  WorldSpaceMesh.h
include/meshcore/factories/: AABBFactory.h  OBBFactory.h  SphereFactory.h
include/meshcore/geometric/: AABBTriangleData.h  Distance.h  GJK.h  Intersection.h
include/meshcore/localsearch/: AbstractLocalSearch.h  AbstractSolution.h  HillClimbing.h  LateAcceptance.h  SimulatedAnnealing.h
include/meshcore/optimization/: AbstractLocalSearch.h  AbstractSolution.h  SingleVolumeMaximisationSolution.h  StripPackingProblem.h  StripPackingSolution.h
include/meshcore/rendering/: ApplicationWindow.h  KeyFrame.h  OpenGLWidget.h  PhongMaterial.h  RenderWidget.h
include/meshcore/tasks/: AbstractTask.h  AbstractTaskObserver.h  ConsoleTaskObserver.h
include/meshcore/utility/: FileParser.h  Triangulation.h  hash.h  io.h  random.h
localsearch/: AbstractLocalSearch.h  HillClimbing.h  SimulatedAnnealing.h
rendering/: AbstractRenderModel.cpp  AbstractRenderModel.h  ApplicationWindow.cpp  Color.h  Exception.h  KeyFrame.h  NewApplicationWindow.cpp  NewApplicationWindow.h  OpenGLRenderWidget.cpp  OpenGLRenderWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  PhongMaterial.h  RenderAABB.cpp  RenderAABB.h  RenderAABBTree.h  RenderBoundsTree.cpp  RenderBoundsTree.h  RenderBoxTree.h  RenderGroupControlWidget.cpp  RenderGroupControlWidget.h  RenderLine.cpp  RenderLine.h  RenderListeners.h  RenderMesh.cpp  RenderMesh.h  RenderModel.cpp  RenderModel.h  RenderModelControlWidget.cpp  RenderModelControlWidget.h  RenderModelDetailDialog.cpp  RenderModelDetailDialog.h  RenderOBB.cpp  RenderOBB.h  RenderPlane.cpp  RenderPlane.h  RenderRay.cpp  RenderRay.h  RenderSphere.cpp  RenderSphere.h  (+6 more)
rendering/forms/: rendergroupcontrolwidget.ui  rendermodelcontrolwidget.ui  rendermodeldetaildialog.ui  renderwidget.ui
rendering/shaders/: Ambient.shader  Diffuse.shader  Phong.shader  PolyChrome.shader
src/acceleration/: AABBOctree.cpp  AABBVolumeHierarchy.cpp  BoundingVolumeHierarchy.cpp
src/core/: ModelSpaceMesh.cpp  WorldSpaceMesh.cpp
src/factories/: SphereFactory.cpp
src/geometric/: AABBRay.cpp  AABBTriangle.cpp  BoxBox.cpp  GJK.cpp  MeshMesh.cpp  OBBOBB.cpp  Plane.cpp  RayTriangle.cpp  Sphere.cpp  TriDist.cpp  TriangleTriangle.cpp
src/optimization/: SingleVolumeMaximisationSolution.cpp  StripPackingProblem.cpp  StripPackingSolution.cpp
src/rendering/: AbstractRenderModel.cpp  AbstractRenderModel.h  ApplicationWindow.cpp  OpenGLWidget.cpp  OpenGLWidget.h  RenderAABB.cpp  RenderAABB.h  RenderBoundsTree.cpp  RenderBoundsTree.h  RenderGroupControlWidget.cpp  RenderGroupControlWidget.h  RenderLine.cpp  RenderLine.h  RenderListeners.h  RenderMesh.cpp  RenderMesh.h  RenderModelControlWidget.cpp  RenderModelControlWidget.h  RenderModelDetailDialog.h  RenderOBB.cpp  RenderOBB.h  RenderPlane.cpp  RenderPlane.h  RenderRay.cpp  RenderRay.h  RenderSphere.cpp  RenderSphere.h  RenderWidget.cpp  RenderWidget.h  ShaderProgramSource.h
src/rendering/forms/: rendergroupcontrolwidget.ui  rendermodelcontrolwidget.ui  rendermodeldetaildialog.ui  renderwidget.ui
src/rendering/shaders/: Diffuse.shader
src/tasks/: AbstractTask.cpp  ConsoleTaskObserver.cpp
src/utility/: FileParser.cpp  Triangulation.cpp
tasks/: AbstractTask.cpp  AbstractTask.h  AbstractTaskObserver.h  ConsoleTaskObserver.cpp  ConsoleTaskObserver.h
templates/: taskTemplate.cpp
tests/: CMakeLists.txt  TestConvexHull.cpp  main.cpp  test_AABB.cpp  test_OBB.cpp  test_bvh.h.cpp  test_closestPoint.cpp  test_convexHull.cpp  test_planeIntersection.cpp  test_transformation.cpp
utility/: FileParser.cpp  FileParser.h  Triangulation.cpp  hash.h  io.h  random.h
